Fix: 修复 ThreadPrinter 运行问题
- 添加 content.js 消息监听，响应 popup 的 extractThread 请求
- 统一数据格式，包装响应数据匹配 popup 期望结构
- 添加 utils/generators.js 统一导出所有生成器
- 修复 popup.js 数据访问方式
- 修复 preview.js 数据字段映射 (textPlain -> text)
- 为 markdown/html/pdf 生成器添加 ES 模块导出
- 更新 manifest.json 添加 utils/*.js 到 web_accessible_resources

--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,11 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["preview/preview.html", "themes/*.css"],
+      "resources": [
+        "preview/preview.html",
+        "themes/*.css",
+        "utils/*.js"
+      ],
       "matches": ["<all_urls>"]
     }
   ],
