Fix: 解决 'Receiving end does not exist' 错误
- 修改 manifest.json: run_at 从 document_idle 改为 document_start
- 添加 all_frames: false 确保只在主框架运行
- 增强 popup.js: 添加自动注入 content script 功能
- 添加 ping 检测机制，确保 content script 已加载
- 添加带重试的消息发送机制
- content.js: 添加 ping 消息响应
- 添加 tests/functional-test.js 测试脚本
- 添加 tests/README.md 测试文档

--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,8 @@
     {
       "matches": ["*://twitter.com/*", "*://x.com/*"],
       "js": ["lib/Readability.js", "content.js"],
-      "run_at": "document_idle"
+      "run_at": "document_start",
+      "all_frames": false
     }
   ],
   "web_accessible_resources": [
