--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "activeTab",
     "storage",
     "downloads",
-    "scripting"
+    "scripting",
+    "debugger"
   ],
   "host_permissions": [
     "*://twitter.com/*",
@@ -23,7 +24,8 @@
     }
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
